Add red mask for dice detection

--- a/detect_js/index.html
+++ b/detect_js/index.html
@@ -43,6 +43,10 @@
             <div class="caption">hsvYellowOutput</div>
         </div>
         <div class="inputoutput">
+            <canvas id="hsvRedOutput"></canvas>
+            <div class="caption">hsvRedOutput</div>
+        </div>
+        <div class="inputoutput">
             <canvas id="hsvBlackOpened"></canvas>
             <div class="caption">hsvBlackOpened</div>
         </div>
@@ -70,6 +74,25 @@
             return hsvYellow;
         }
 
+        function getRedMask(hsv) {
+            // Threshold the HSV image to get only red colors 
+            let hsvRed = new cv.Mat();
+            // Hue range for red is 0-15 and 165-180, since red is wrap around
+            let low1 = new cv.Mat(hsv.rows, hsv.cols, hsv.type(), [180 * 0.914, 255 * 0.220, 255 * 0.204, 0]);
+            let high1 = new cv.Mat(hsv.rows, hsv.cols, hsv.type(), [180, 255, 255, 0]);
+            cv.inRange(hsv, low1, high1, hsvRed);
+
+            let mat2 = new cv.Mat();
+            let low2 = new cv.Mat(hsv.rows, hsv.cols, hsv.type(), [0, 255 * 0.220, 255 * 0.204, 0]);
+            let high2 = new cv.Mat(hsv.rows, hsv.cols, hsv.type(), [180 * 0.075, 255, 255, 0]);
+            cv.inRange(hsv, low2, high2, mat2);
+
+            cv.bitwise_or(hsvRed, mat2, hsvRed);
+            mat2.delete();
+
+            return hsvRed;
+        }
+
         function runDiceDetection() {
             var startTime = performance.now();
 
@@ -89,6 +112,10 @@
             // Threshold the HSV image to get only yellow colors
             let hsvYellow = getYellowMask(hsv);
             cv.imshow('hsvYellowOutput', hsvYellow);
+
+            // Threshold the HSV image to get only red colors
+            let hsvRed = getRedMask(hsv);
+            cv.imshow('hsvRedOutput', hsvRed);
 
             // Mask opening
             let kernel = cv.Mat.ones(3, 3, cv.CV_8U);
@@ -115,6 +142,7 @@
             src.delete(); hsv.delete(); hsvBlackOpened.delete(); dst.delete(); lines.delete();
             hsvBlack.delete();
             hsvYellow.delete();
+            hsvRed.delete();
 
             var endTime = performance.now();
             var timeTaken = endTime - startTime;
