Add template and canvas elements for image processing

--- a/detect_js/index.html
+++ b/detect_js/index.html
@@ -31,6 +31,14 @@
             <div class="caption">imageSrc <input type="file" id="fileInput" name="file" /></div>
         </div>
         <div class="inputoutput">
+            <img id="templateImage" alt="template" src="../resources/template.svg"></canvas>
+            <div class="caption">template</div>
+        </div>
+        <div class="inputoutput">
+            <canvas id="withTemplate"></canvas>
+            <div class="caption">withTemplate</div>
+        </div>
+        <div class="inputoutput">
             <canvas id="hsvOutput"></canvas>
             <div class="caption">hsvOutput</div>
         </div>
