--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* Centers the image/canvas if it's smaller than the max width */
         }
     </style>
-    <script async src="opencv.js" type="text/javascript"></script>
+    <script async src="./engine/opencv.js" type="text/javascript"></script>
 </head>
 
 <body>
