--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             /* Centers the image/canvas if it's smaller than the max width */
         }
     </style>
-    <script async src="./engine/opencv.js" type="text/javascript"></script>
+    <script src="./engine/opencv.js" type="text/javascript"></script>
+    <script src="./engine/templater.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -27,11 +28,11 @@
     <div>
         <p id="timeTaken"></p>
         <div class="inputoutput">
-            <img id="imageSrc" alt="No Image" src="../examples/far_full.jpg" />
+            <img id="imageSrc" alt="No Image" src="./examples/far_full.jpg" />
             <div class="caption">imageSrc <input type="file" id="fileInput" name="file" /></div>
         </div>
         <div class="inputoutput">
-            <img id="templateImage" alt="template" src="../resources/template.png"></canvas>
+            <img id="templateImage" alt="template" src="./resources/template.png"></canvas>
             <div class="caption">template</div>
         </div>
         <div class="inputoutput">
@@ -109,70 +110,6 @@
         </div>
     </div>
     <script type="text/javascript">
-
-        function getScale(src, dst, padding = 0.1) {
-            let scaleHorizontal = (dst.cols * (1 - padding * 2)) / src.cols;
-            let scaleVertical = (dst.rows * (1 - padding * 2)) / src.rows;
-            let scale = Math.min(scaleHorizontal, scaleVertical);
-            return scale;
-        }
-
-        function getTemplateGridRoi(template, scale = 1.0) {
-            let left = 35;
-            let top = 850;
-            let right = 530;
-            let bottom = 1245;
-            let rowsFromPng = 1280;
-            let colsFromPng = 565;
-            let templateCols = template.cols;
-            let templateRows = template.rows;
-            let scaleCols = templateCols / colsFromPng * scale;
-            let scaleRows = templateRows / rowsFromPng * scale;
-            return new cv.Rect(left * scaleCols, top * scaleRows, (right - left) * scaleCols, (bottom - top) * scaleRows);
-        }
-
-        // Draw the template on the dst image
-        // Returns the grid region of the dst image
-        function drawTemplateOn(dst) {
-            let template = cv.imread('templateImage');
-
-            // rescale the template to match the dst height
-            let padding = 0.1; // % of padding
-            let scale = getScale(template, dst, padding);
-            let templateRescaled = new cv.Mat();
-            cv.resize(template, templateRescaled, new cv.Size(template.cols * scale, template.rows * scale), 0, 0, cv.INTER_AREA);
-
-            let templateRoi = getTemplateGridRoi(template, scale);
-
-            cv.imshow('templateRescaled', templateRescaled);
-
-            // Draw the template in the middle of the dst
-            let x = (dst.cols - templateRescaled.cols) / 2;
-            let y = (dst.rows - templateRescaled.rows) / 2;
-
-            templateRoi.x += x;
-            templateRoi.y += y;
-
-            let grid = dst.roi(templateRoi).clone();
-
-            // Can't use cv.addWeighted because the template has an alpha channel
-            for (let i = 0; i < templateRescaled.rows; i++) {
-                for (let j = 0; j < templateRescaled.cols; j++) {
-                    let pixel = templateRescaled.ucharPtr(i, j);
-                    if (pixel[3] > 0) {
-                        let dstPixel = dst.ucharPtr(y + i, x + j);
-                        dstPixel[0] = pixel[0];
-                        dstPixel[1] = pixel[1];
-                        dstPixel[2] = pixel[2];
-                    }
-                }
-            }
-
-            template.delete(); templateRescaled.delete();
-
-            return grid;
-        }
-
         function getBlackMask(hsv) {
             // Threshold the HSV image to get only black colors 
             let hsvBlack = new cv.Mat();
@@ -327,11 +264,15 @@
             let dst = cv.Mat.zeros(src.rows, src.cols, cv.CV_8UC3);
 
             // Draw the template on the src copy
-            let copy = src.clone();
-            let grid = drawTemplateOn(copy);
-            cv.imshow('withTemplate', copy);
+            let template = cv.imread('templateImage');
+            let templater = new Templater(template);
+            let result = templater.render(src);
+            cv.imshow('withTemplate', result.imageWithTemplate);
+            result.imageWithTemplate.delete();
+
+            // Get the grid based on t
+            let grid = src.roi(result.gridRoi);
             cv.imshow('gridOnly', grid);
-            copy.delete();
 
             // Convert image to HSV
             let hsv = cv.Mat.zeros(grid.rows, grid.cols, cv.CV_8UC3);
@@ -409,21 +350,21 @@
             cv.morphologyEx(hsvBlack, hsvBlackOpened, cv.MORPH_OPEN, kernel, anchor, iterations);
             cv.imshow('hsvBlackOpened', hsvBlackOpened);
 
-            let lines = new cv.Mat();
-            let color = new cv.Scalar(255, 0, 0);
-            // cv.cvtColor(hsv, src, cv.COLOR_RGBA2GRAY, 0);
-            cv.Canny(hsvBlackOpened, hsvBlackOpened, 220, 250, 5);
-            // You can try more different parameters
-            cv.HoughLinesP(hsvBlackOpened, lines, 1, Math.PI / 180, 2, 0, 0);
-            // draw lines
-            for (let i = 0; i < lines.rows; ++i) {
-                let startPoint = new cv.Point(lines.data32S[i * 4], lines.data32S[i * 4 + 1]);
-                let endPoint = new cv.Point(lines.data32S[i * 4 + 2], lines.data32S[i * 4 + 3]);
-                cv.line(dst, startPoint, endPoint, color);
-            }
-            cv.imshow('canvasOutput', dst);
+            // let lines = new cv.Mat();
+            // let color = new cv.Scalar(255, 0, 0);
+            // // cv.cvtColor(hsv, src, cv.COLOR_RGBA2GRAY, 0);
+            // cv.Canny(hsvBlackOpened, hsvBlackOpened, 220, 250, 5);
+            // // You can try more different parameters
+            // cv.HoughLinesP(hsvBlackOpened, lines, 1, Math.PI / 180, 2, 0, 0);
+            // // draw lines
+            // for (let i = 0; i < lines.rows; ++i) {
+            //     let startPoint = new cv.Point(lines.data32S[i * 4], lines.data32S[i * 4 + 1]);
+            //     let endPoint = new cv.Point(lines.data32S[i * 4 + 2], lines.data32S[i * 4 + 3]);
+            //     cv.line(dst, startPoint, endPoint, color);
+            // }
+            // cv.imshow('canvasOutput', dst);
             // Dispose the mats to free memory
-            src.delete(); hsv.delete(); hsvBlackOpened.delete(); dst.delete(); lines.delete();
+            src.delete(); hsv.delete(); hsvBlackOpened.delete();
             hsvBlack.delete();
             hsvYellow.delete();
             hsvRed.delete();
